Fixes #29926 with some overflow hidden css magic on the search field for IE. reviewed by epowell.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@53726 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
+++ b/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
@@ -234,3 +234,8 @@ $include-missing-images: true;
     }
     th, td{padding:0px !important;}
 }
+
+.x-ie .searchfield{
+    height:21px !important;
+    overflow:hidden;
+}
